<resources>
    <string name="app_name">Reminder</string>
    <string name="fragment_add_title">Add reminder</string>
    <string name="edit_text_hint">Add text</string>
    <string name="reminder_date">Reminder date</string>
    <string name="reminder_time">Reminder time</string>
    <string name="every_day_mode">Every day mode</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Save</string>
    <string name="languagesListName">Language</string>
    <string name="englishLanguage">English</string>
    <string name="russianLanguage">Russian</string>
    <string name="start_audio">Start audio</string>
    <string name="delate">Delete</string>
    <string name="edit">Edit</string>
    <string name="choose_time">Choose time:</string>
    <string name="changes_saved">Changes saved!</string>
    <string name="reminder_set">Reminder set!</string>
    <string name="please_write_a_name">Please write a name!</string>
    <string name="please_record_your_voice">Please record your voice!</string>
    <string name="select_upcoming_time">Select upcoming time!</string>
    <string name="allowMicrophone">To use this feature, please allow the microphone!</string>
    <string name="every_day">Every day</string>
    <string name="disposable">Disposable</string>
    <string name="permissions">Permissions</string>
    <string name="recomend">Allow the following requests to use all the functions of the program</string>
    <string name="voice">Microphone</string>
    <string name="voice_permission_recomend">We use a microphone to record sound and play it back when the time comes back. We assure you that we will not use the microphone for evil purposes. Some functions in the program may not work if you do not allow the microphone.</string>
    <string name="allow">Allow</string>
    <string name="on_top_of_other_windows">On top of other windows</string>
    <string name="overlay_permission_recomend">Allow this request so that the program wakes up and warns you when the time is right, even when you are working. If you do not allow it, the program will not work normally. Click the button below to allow. And find the "Reminder" app in the settings section and enable it.</string>
    <string name="next">Next</string>
    <string name="mi_brand_title">For owners of Mi brand phones (Xiaomi)</string>
    <string name="mi_brand_recomend1">If you have a Mi brand phone (Xiaomi). Go to app settings using the button below to allow the following:</string>
    <string name="mi_brand_recomend2">If you do not allow this, the program will not work normally.</string>
    <string name="uzbek">Uzbek</string>
    <string name="vibrate_mode">Vibrate mode</string>
    <string name="reminder_on_list">A reminder at this time is on the list!</string>
    <string name="open_app_settings">Open app settings</string>
    <string name="limitation">Sound cannot be recorded for more than 15 seconds!</string>
    <string name="press_hold_longer">Hold the button a little longer!</string>
    <string name="hold_to_record_voice">Hold to record voice!</string>
    <string name="fragment_add_title_edit">Editing</string>
</resources>