<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/backgraundStyle"
    tools:context=".fragments.PermissionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/permissions"
            android:textColor="#009688"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/recomend"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="12dp"
            style="@style/cardBackgraund"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:contentPadding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="microphone_per.json"
                        app:lottie_loop="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/voice"
                            android:textColor="#009688"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/voice_permission_recomend"
                            style="@style/textColor"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/voiceAllow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#009688"
                    android:gravity="center"
                    android:text="@string/allow"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="12dp"
            style="@style/cardBackgraund"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:contentPadding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="overlay_per.json"
                        app:lottie_loop="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/on_top_of_other_windows"
                            android:textColor="#009688"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/overlay_permission_recomend"
                            style="@style/textColor"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/overlayAllow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#009688"
                    android:gravity="center"
                    android:text="@string/allow"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:gravity="center"
            android:text="@string/mi_brand_title"/>

        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/mi_brand_recomend1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="300dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/miui_1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="300dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/miui_2" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="300dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/miui_3" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/appSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="#009688"
            android:gravity="center"
            android:text="Open app settings"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/mi_brand_recomend2"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#009688"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>